Fixes bright color visibility on contact page

--- a/style/less/site.less
+++ b/style/less/site.less
@@ -157,7 +157,7 @@ textarea {
 	background: none;
 	line-height: 1.4;
 	border: none;
-	border-bottom: 1px solid lighten(@bright-color, 50%);
+	border-bottom: 1px solid fade(@bright-color, 10%);
 	resize: none;
 	.border-radius(0);
 	.transition(all 500ms ease);
@@ -199,7 +199,7 @@ textarea {
 		}
 
 		a {
-			color: lighten(@bright-color, 30%);
+			color: fade(@bright-color, 50%);
 		}
 	}
 
